--- a/proyecto-jcmd/index.html
+++ b/proyecto-jcmd/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar fixed-top bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Fixed top</a>
+            <a class="navbar-brand" href="#">PROYECTO</a>
         </div>
     </nav>
 
