--- a/proyecto-jcmd/index.html
+++ b/proyecto-jcmd/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>proyecto-jcmd</title>
+    <title>LARB</title>
+    <link rel="icon" href="assets\lider.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
 </head>
@@ -12,11 +13,11 @@
 <body>
     <nav class="navbar fixed-top bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">PROYECTO</a>
+            <a class="navbar-brand" href="#">LECCIONES APRENDIDAS REGIÓN BAJÍO</a>
         </div>
     </nav>
 
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -62,10 +63,11 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+    
 
     <!-- Barra de búsqueda -->
     <div class="container mt-4">
-        <input type="text" id="searchBar" class="form-control" placeholder="Buscar modales...">
+        <input type="text" id="searchBar" class="form-control" placeholder="Buscar...">
     </div>
 
     <!-- Contenedor para los modales -->
