--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar fixed-top bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">LECCIONES APRENDIDAS REGIÓN BAJÍO</a>
+            <a class="navbar-brand" href="#">LECCIONES APRENDIDAS Y BUENAS PRÁCTICAS EN EJECUCIÓN DE PROYECTOS</a>
         </div>
     </nav>
 
@@ -28,7 +28,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://w0.peakpx.com/wallpaper/415/999/HD-wallpaper-artistic-house.jpg" class="d-block w-100"
+                <img src="assets\carrusel-1.jpg" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://w0.peakpx.com/wallpaper/604/480/HD-wallpaper-nebula-amazing.jpg" class="d-block w-100"
+                <img src="assets\carrusel-2.jpg" class="d-block w-100"
                     alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://w0.peakpx.com/wallpaper/619/580/HD-wallpaper-planet-pixel-art.jpg"
+                <img src="assets\carrusel-3.jpg"
                     class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
