modificación de letra

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel1">Proceso de sembrado de postes y líneas de vista (acompañamiento de
-                                    dependencias).</h5>
+                                <h5 class="modal-title" id="exampleModalLabel1"><b>Proceso de sembrado de postes y líneas de vista (acompañamiento de
+                                    dependencias).</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -140,7 +140,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel2">Vestir un punto de monitoreo inteligente completo antes de comenzar a implementar.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel2"><b>Vestir un punto de monitoreo inteligente completo antes de comenzar a implementar.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -182,7 +182,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel3">Preparación de kits de instalación de equipamiento y consumibles.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel3"><b>Preparación de kits de instalación de equipamiento y consumibles.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -217,7 +217,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel4">Configuración de equipamiento en la sucursal (pensar en sombra).</h5>
+                                <h5 class="modal-title" id="exampleModalLabel4"><b>Configuración de equipamiento en la sucursal (pensar en sombra).</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -259,7 +259,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel5">Firma de responsivas de equipamiento entregado.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel5"><b>Firma de responsivas de equipamiento entregado.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -294,7 +294,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel6">Plan de trabajo.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel6"><b>Plan de trabajo.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -326,7 +326,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel7">Supervisión de trabajos.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel7"><b>Supervisión de trabajos.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -360,7 +360,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel8">Visualización de VMS en Centro de Mando.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel8"><b>Visualización de VMS en Centro de Mando.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -394,7 +394,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel9">Sesiones de aprendizaje con áreas involucradas en proyecto sobre la tecnología a implementar.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel9"><b>Sesiones de aprendizaje con áreas involucradas en proyecto sobre la tecnología a implementar.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -428,7 +428,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel10">Cumplir con las configuraciones que demanda el anexo técnico.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel10"><b>Cumplir con las configuraciones que demanda el anexo técnico.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -459,7 +459,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel11">Herramientas funcionales aplicadas.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel11"><b>Herramientas funcionales aplicadas.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -505,7 +505,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel12">VISITAS DE QUIEN EJECUTA LA SOLUCIÓN DEL PROYECTO.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel12"><b>VISITAS DE QUIEN EJECUTA LA SOLUCIÓN DEL PROYECTO.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -547,7 +547,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel13">KICK OFF PROVEEDORES</h5>
+                                <h5 class="modal-title" id="exampleModalLabel13"><b>KICK OFF PROVEEDORES</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
@@ -582,7 +582,7 @@
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel13">SOLICITUD DE MATERIAL.</h5>
+                                <h5 class="modal-title" id="exampleModalLabel13"><b>SOLICITUD DE MATERIAL.</b></h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                             </div>
