--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container mt-5">
         <div class="row">
 
-            <h2 style="color: bisque;">PLANTA EXTERNA</h2>
+            <h2 style="color: bisque;">LECCIONES APRENDIDAS - PLANTA EXTERNA</h2>
             <h5 style="color: rgb(159, 215, 219);">A continuación se plasmarán puntos relevantes que nos permiten ahorrar tiempos de ejecución, ahorro
                 monetario y una fuerza de trabajo con menor desgaste.
             </h5>
@@ -488,7 +488,7 @@
                 </div>
             </div>
 
-            <h2 style="color: bisque;">PLANTA INTERNA</h2>
+            <h2 style="color: bisque;">LECCIONES APRENDIDAS - PLANTA INTERNA</h2>
             <hr style="height: 5px; background-color: black; border: none;">
 
             <!-- 12 Modal -->
